syntax = "proto3";

package giftduels.gift.v1;

import "giftduels/gift/v1/gift.proto";
import "giftduels/shared/v1/common.proto";

option go_package = "github.com/peterparker2005/giftduels/packages/protobuf-go/gen/giftduels/gift/v1;giftv1";

service GiftPublicService {
  // Get user's gifts with filtering and pagination
  rpc GetGifts(GetGiftsRequest) returns (GetGiftsResponse) {}

  // Get specific gift details
  rpc GetGift(GetGiftRequest) returns (GetGiftResponse) {}

  // Initiate gift withdrawal process
  rpc ExecuteWithdraw(ExecuteWithdrawRequest) returns (ExecuteWithdrawResponse) {}
}

message GetStatsRequest {
  string wallet_address = 1;
}

message GetGiftRequest {
  shared.v1.GiftId gift_id = 1;
}

message GetGiftResponse {
  GiftView gift = 1;
}

message ExecuteWithdrawRequest {
  repeated shared.v1.GiftId gift_ids = 1;

  enum CommissionCurrency {
    COMMISSION_CURRENCY_UNSPECIFIED = 0;
    COMMISSION_CURRENCY_TON = 1;
    COMMISSION_CURRENCY_STARS = 2;
  }

  CommissionCurrency commission_currency = 2;
}

message ExecuteWithdrawResponse {
  oneof response {
    shared.v1.SuccessResponse ton_success = 1;
    string stars_invoice_url = 2;
  }
}

message GetGiftsRequest {
  shared.v1.PageRequest pagination = 1;
}

message GetGiftsResponse {
  repeated GiftView gifts = 1;
  shared.v1.TonAmount total_value = 2;
  shared.v1.PageResponse pagination = 100;
}
