syntax = "proto3";

package giftduels.payment.v1;

import "giftduels/payment/v1/payment.proto";
import "giftduels/payment/v1/public_service.proto";
import "giftduels/shared/v1/common.proto";

option go_package = "github.com/peterparker2005/giftduels/packages/protobuf-go/gen/giftduels/payment/v1;paymentv1";

service PaymentPrivateService {
  rpc SpendUserBalance(SpendUserBalanceRequest) returns (SpendUserBalanceResponse) {}
  rpc AddUserBalance(AddUserBalanceRequest) returns (AddUserBalanceResponse) {}
  rpc GetUserBalance(GetUserBalanceRequest) returns (GetUserBalanceResponse) {}
  // buf:lint:ignore RPC_REQUEST_STANDARD_NAME
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc PreviewWithdraw(PreviewWithdrawRequest) returns (PreviewWithdrawResponse) {}
}

message SpendUserBalanceRequest {
  shared.v1.TelegramUserId telegram_user_id = 1;
  shared.v1.TonAmount ton_amount = 2;
  TransactionReason reason = 3;
  optional TransactionMetadata metadata = 4;
}

message SpendUserBalanceResponse {
  shared.v1.TonAmount new_amount = 1;
}

message AddUserBalanceRequest {
  shared.v1.TelegramUserId telegram_user_id = 1;
  shared.v1.TonAmount ton_amount = 2;
  TransactionReason reason = 3;
  optional TransactionMetadata metadata = 4;
}

message AddUserBalanceResponse {
  shared.v1.TonAmount new_amount = 1;
}

message GetUserBalanceRequest {
  shared.v1.TelegramUserId telegram_user_id = 1;
}

message GetUserBalanceResponse {
  shared.v1.TonAmount amount = 1;
}
